# RandomFieldsUtils

./: DESCRIPTION  MD5  NAMESPACE  configure  configure.ac
R/: RFoptions.R  RFutils.R  aaa_auto.R  getNset.R  gpu.R  internal_use.R  maths.R  utils.R  zzz.R
inst/: CITATION
inst/include/: AutoRandomFieldsUtils.h  Basic_utils.h  Basic_utils_local.h  Error_utils.h  General_utils.h  Matrix_mult.h  Options_utils.h  RFU.h  RandomFieldsUtils.h  Solve.h  Struve.h  Utils.h  def.h  errors_messages.h  extern.h  init_RandomFieldsUtils.h  intrinsics.h  intrinsics_specific.h  kleinkram.h  options.h  own.h  parallel_base.h  solve_gpu.h  sse2neon.H  sse2neon.h  utils.h  win_linux_aux.h  xport_import.h  zzz_RandomFieldsUtils.h  zzz_calls.h
man/: Print.Rd  RFoptions.Rd  Struve.Rd  cholPosDef.Rd  dbinorm.Rd  fileexists.Rd  gauss.Rd  hostname.Rd  internal.Rd  matern.Rd  nonstwm.Rd  orderx.Rd  rowMeansx.Rd  sleep.Rd  solvePosDef.Rd  sortx.Rd  uses.instruction.set.Rd
man/macros/: allg_defn.Rd
src/: AutoRandomFieldsUtils.cc  AutoRandomFieldsUtils.h  AutoRandomFieldsUtilsLocal.h  Basic_utils.h  Basic_utils_local.h  Error_utils.h  General_utils.h  Makevars  Makevars.in  Matrix_mult.h  Options_utils.h  RF.h  RFU.h  RFoptions.cc  RFutils.cc  R_init.cc  R_init.h  RandomFieldsUtils.h  Solve.h  Struve.h  Utils.h  avx.cc  avx2.cc  avx2_fctns.cc  avx_fctns.cc  bckslvmodified.f  beskf.cc  brdomain.cc  cholmodified.f  def.h  diffusion.cc  errors_messages.h  extern.cc  gpu_info.cc  gpu_info_61.cu  immintrin.h  init_RandomFieldsUtils.c  init_RandomFieldsUtils.cc  intrinsics.h  intrinsics.specific.h  (+31 more)
